--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-js-hw-09.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-09/",
+    "build": "vite build --base=/goit-js-hw-09.0/",
     "preview": "vite preview"
   },
   "devDependencies": {
     "glob": "^8.1.0",
-    "vite": "^4.0.5"
+    "vite": "^4.5.2"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Anna Osadchuk <anna.osadchuk@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.14.2",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
